[gd_scene load_steps=15 format=3 uid="uid://c2upluruwt8c"]

[ext_resource type="Shader" path="res://Scenes/Wormhole Minigame/wormhole_exterior.gdshader" id="1_hg32g"]
[ext_resource type="Script" path="res://Scenes/Wormhole Minigame/wormhole_minigame.gd" id="1_u2vnu"]
[ext_resource type="Environment" uid="uid://ktbbdqasxhbr" path="res://Scenes/Wormhole Minigame/wormhole_minigame_environment.tres" id="2_phyvx"]
[ext_resource type="PackedScene" uid="uid://cd845qsl0v3dk" path="res://Instantiated Scenes/Starship/starship.glb" id="4_1fh2q"]
[ext_resource type="Texture2D" uid="uid://byp6pykkhwnpf" path="res://Graphics/Misc/star_backdrop.jpeg" id="4_jtuyj"]
[ext_resource type="Script" path="res://Scenes/Wormhole Minigame/wormhole_animation.gd" id="4_pmdih"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_whf3l"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_btx65"]
frequency = 0.005
offset = Vector3(-23133.2, 0, 0)
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mbhjw"]
invert = true
noise = SubResource("FastNoiseLite_btx65")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibrli"]
render_priority = 0
shader = ExtResource("1_hg32g")
shader_parameter/color = Color(0.501961, 0, 0.501961, 1)
shader_parameter/noise = SubResource("NoiseTexture2D_mbhjw")
shader_parameter/normal_map = SubResource("NoiseTexture2D_mbhjw")
shader_parameter/stars = ExtResource("4_jtuyj")

[sub_resource type="SphereMesh" id="SphereMesh_mdcva"]
material = SubResource("ShaderMaterial_ibrli")
radius = 100.0
height = 200.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pa1kh"]
bg_color = Color(0.6, 1, 0.6, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bgttb"]
content_margin_left = 50.0
content_margin_bottom = 140.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vojrf"]
content_margin_left = 50.0
content_margin_bottom = 140.0

[node name="wormhole_minigame_window" type="Window"]
own_world_3d = true
canvas_item_default_texture_filter = 0
title = "Wormhole Traversal"
position = Vector2i(0, 36)
size = Vector2i(500, 400)
unresizable = true
always_on_top = true

[node name="minigame_container" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="minigame_viewport" type="SubViewport" parent="minigame_container"]
handle_input_locally = false
size = Vector2i(500, 400)
render_target_update_mode = 4

[node name="wormhole_minigame" type="Node3D" parent="minigame_container/minigame_viewport"]
script = ExtResource("1_u2vnu")

[node name="star" type="DirectionalLight3D" parent="minigame_container/minigame_viewport/wormhole_minigame"]
transform = Transform3D(-0.370448, -0.433016, -0.821745, -0.85725, 0.499998, 0.122982, 0.357618, 0.749999, -0.556427, 0, 0, 0)
shadow_enabled = true

[node name="environment" type="WorldEnvironment" parent="minigame_container/minigame_viewport/wormhole_minigame"]
environment = ExtResource("2_phyvx")
camera_attributes = SubResource("CameraAttributesPractical_whf3l")

[node name="wormhole" type="MeshInstance3D" parent="minigame_container/minigame_viewport/wormhole_minigame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -150, 0)
mesh = SubResource("SphereMesh_mdcva")
script = ExtResource("4_pmdih")

[node name="starship_and_camera" type="Node3D" parent="minigame_container/minigame_viewport/wormhole_minigame"]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, -200, -150, 0)

[node name="starship" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera" instance=ExtResource("4_1fh2q")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="camera" type="Camera3D" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera"]
transform = Transform3D(0.819152, -0.517878, 0.24656, 0, 0.429865, 0.902893, -0.573576, -0.739607, 0.352125, 2.5, 5, -2.5)
current = true

[node name="UI_control" type="Control" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="speed_slider" type="VSlider" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
max_value = 10.0
step = 0.01
tick_count = 10

[node name="info_container" type="VBoxContainer" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
grow_vertical = 2

[node name="speed_container" type="CenterContainer" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="speed_goal" type="ProgressBar" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/speed_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_pa1kh")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="speed_progress" type="ProgressBar" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/speed_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
max_value = 10.0
fill_mode = 3
show_percentage = false

[node name="speed_label" type="Label" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/speed_container"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bgttb")
text = "SPEED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="distance_container" type="CenterContainer" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="distance_goal" type="ProgressBar" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/distance_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_pa1kh")
value = 10.0
fill_mode = 3
show_percentage = false

[node name="distance_progress" type="ProgressBar" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/distance_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
max_value = 200.0
fill_mode = 3
show_percentage = false

[node name="distance_label" type="Label" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/info_container/distance_container"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_vojrf")
text = "DISTANCE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hull_stress_label" type="Label" parent="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "HULL STRESS: +7%"

[connection signal="value_changed" from="minigame_container/minigame_viewport/wormhole_minigame/starship_and_camera/camera/UI_control/speed_slider" to="minigame_container/minigame_viewport/wormhole_minigame" method="_on_speed_slider_value_changed"]
